# code/2-exam/api/api.go
@@ -69,18 +69,24 @@ func NewApi(r *gin.Engine, cfg *config.Config, store storage.StorageI, logger lo
 	r.DELETE("/staff/:id", handler.DeleteStaff)
 
 	// order api
-	r.POST("/order", handler.CreateOrder)
-	r.GET("/order/:id", handler.GetByIdOrder)
-	r.GET("/order", handler.GetListOrder)
-	r.PUT("/order/:id", handler.UpdateOrder)
-	r.PATCH("/order/:id", handler.UpdatePatchOrder)
-	r.DELETE("/order/:id", handler.DeleteOrder)
-	r.POST("/order_item/", handler.CreateOrderItem)
-	r.DELETE("/order_item/:id", handler.DeleteOrderItem)
-	r.GET("/ordersold", handler.InfoOfSoldProductsByStaffer)
+	// r.Use(cusomMIddleware())
+
+	v1 := r.Group("/v1")
+
+	v1.Use(handler.AuthMiddleware())
+
+	r.POST("/order", handler.AuthMiddleware(), handler.CreateOrder)
+	r.GET("/order/:id", handler.AuthMiddleware(), handler.GetByIdOrder)
+	r.GET("/order",handler.AuthMiddleware(), handler.GetListOrder)
+	r.PUT("/order/:id",handler.AuthMiddleware(), handler.UpdateOrder)
+	r.PATCH("/order/:id",handler.AuthMiddleware(), handler.UpdatePatchOrder)
+	r.DELETE("/order/:id",handler.AuthMiddleware(), handler.DeleteOrder)
+	r.POST("/order_item/",handler.AuthMiddleware(), handler.CreateOrderItem)
+	r.DELETE("/order_item/:id",handler.AuthMiddleware(), handler.DeleteOrderItem)
+	r.GET("/ordersold",handler.AuthMiddleware(), handler.InfoOfSoldProductsByStaffer)
 
 	// total price
-	r.GET("/totalorder/total_price", handler.TotalPriceOrder)
+	r.GET("/totalorder/total_price/:id", handler.TotalPriceOrder)
 	
 	// promo_code api
 	r.POST("/promo_code", handler.CreatePromoCode)
