# code/2-exam/api/docs/swagger.json
@@ -1399,6 +1399,12 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Password",
+                        "name": "Password",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
                         "description": "offset",
                         "name": "offset",
                         "in": "query"
@@ -1488,6 +1494,12 @@
                 "operationId": "create_order",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Password",
+                        "name": "Password",
+                        "in": "header"
+                    },
+                    {
                         "description": "CreateOrderRequest",
                         "name": "order",
                         "in": "body",
@@ -1572,6 +1584,12 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Password",
+                        "name": "Password",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
                         "description": "id",
                         "name": "id",
                         "in": "path",
@@ -1649,6 +1667,12 @@
                 "summary": "Update Order",
                 "operationId": "update_order",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Password",
+                        "name": "Password",
+                        "in": "header"
+                    },
                     {
                         "type": "string",
                         "description": "id",
@@ -1739,6 +1763,12 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Password",
+                        "name": "Password",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
                         "description": "id",
                         "name": "id",
                         "in": "path",
@@ -1825,6 +1855,12 @@
                 "summary": "Update PATCH Order",
                 "operationId": "update_order",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Password",
+                        "name": "Password",
+                        "in": "header"
+                    },
                     {
                         "type": "string",
                         "description": "id",
@@ -1916,6 +1952,12 @@
                 "operationId": "create_order_item",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Password",
+                        "name": "Password",
+                        "in": "header"
+                    },
+                    {
                         "description": "CreateOrderItemRequest",
                         "name": "order_item",
                         "in": "body",
@@ -1998,6 +2040,12 @@
                 "summary": "Delete Order Item",
                 "operationId": "delete_order_item",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Password",
+                        "name": "Password",
+                        "in": "header"
+                    },
                     {
                         "type": "string",
                         "description": "id",
@@ -2095,6 +2143,12 @@
                 "summary": "Sold Products By Staffers",
                 "operationId": "get_list_order_sold",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Password",
+                        "name": "Password",
+                        "in": "header"
+                    },
                     {
                         "type": "string",
                         "description": "offset",
@@ -4500,7 +4554,7 @@
                 }
             }
         },
-        "/totalorder/total_price": {
+        "/totalorder/total_price/{id}": {
             "get": {
                 "description": "Total price orde",
                 "consumes": [
@@ -4517,9 +4571,15 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "order_id",
-                        "name": "order_id",
-                        "in": "query",
+                        "description": "Password",
+                        "name": "Password",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     },
                     {
